--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity=""
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
@@ -12,15 +12,23 @@
             android:id="@+id/image_iew"
             android:src="@drawable/color"
             android:layout_width="350dp"
-            android:layout_height="350dp"/>
+            android:layout_height="350dp" tools:layout_editor_absoluteY="111dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+    <View
+            android:id="@+id/color_view"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" tools:layout_editor_absoluteX="0dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HHHellooo World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" tools:text="testando" android:textSize="30sp"/>
+            android:text="Hex: \nRGB"
+            android:textColor="#000"
+            android:TextSize="18sp"
+            tools:text="testando" android:textSize="30sp" tools:layout_editor_absoluteY="470dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/textView"/>
 
 </android.support.constraint.ConstraintLayout>
