--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:id="@+id/color_view"
             android:layout_width="match_parent"
             android:layout_height="100dp" tools:layout_editor_absoluteX="0dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView"/>
+            app:layout_constraintTop_toBottomOf="@+id/result_tv"/>
 
     <TextView
             android:layout_width="wrap_content"
@@ -29,6 +29,6 @@
             android:TextSize="18sp"
             tools:text="testando" android:textSize="30sp" tools:layout_editor_absoluteY="470dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/textView"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/result_tv"/>
 
 </android.support.constraint.ConstraintLayout>
